adedd dummy data

--- a/src/app/Components/Home/CollectionItems/collections/collections.component.html
+++ b/src/app/Components/Home/CollectionItems/collections/collections.component.html
@@ -18,7 +18,7 @@
             <h2 class="text-2xl font-bold text-gray-900">Collections</h2>
 
             <div class="mt-6 space-y-12 lg:grid lg:grid-cols-3 lg:gap-x-6 lg:space-y-0">
-                <a *ngFor="let collection of this.collectionList" href="#">
+                <a *ngFor="let collection of this.collectionList" href="#" [routerLink]="['/collection', collection.collectionName]" >
                     <div class="group relative">
                         <div
                             class="relative h-80 w-full overflow-hidden rounded-lg bg-white sm:aspect-h-1 sm:aspect-w-2 lg:aspect-h-1 lg:aspect-w-1 group-hover:opacity-75 sm:h-64">
