--- a/src/app/Components/CheckOut/cart/cart/cart.component.html
+++ b/src/app/Components/CheckOut/cart/cart/cart.component.html
@@ -112,13 +112,23 @@
                     <h6 class="font-manrope font-bold text-3xl lead-10 text-indigo-600">$440</h6>
                 </div>
             </div>
-            <div class="max-lg:max-w-lg max-lg:mx-auto">
-                <p class="font-normal text-base leading-7 text-gray-500 text-center mb-5 mt-6">Shipping taxes, and discounts
-                    calculated
-                    at checkout</p>
-                <button data-hs-overlay="#hs-modal-methods"
-                    class="rounded-full py-4 px-6 bg-indigo-600 text-white font-semibold text-lg w-full text-center transition-all duration-500 hover:bg-indigo-700 ">Checkout</button>
-
+            <div class="max-w-lg mx-auto">
+                <p class="font-normal text-base leading-7 text-gray-500 text-center mb-5 mt-6">Shipping taxes, and discounts calculated at checkout</p>
+                <div class="grid gap-4 mb-6">
+                    <button type="button" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700">
+                        <img class="h-3 mr-2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d6/Visa_2021.svg/1280px-Visa_2021.svg.png" alt="Visa Logo"/>
+                        Pay with Visa
+                    </button>
+                    <button type="button" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-green-600 text-white hover:bg-green-700">
+                        <!-- Cash icon -->
+                        Pay with Cash
+                    </button>
+                    <a [routerLink]="['/athMovil']" type="button" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-orange-600 text-white hover:bg-orange-700">
+                        <img class="h-6 mr-2" src="https://play-lh.googleusercontent.com/e8NLtGRmk0z2SUnuwPL18pMUmyJg7z3UTsWZ2YpPcdXqO-k0nNqeI1vHRMJhTNm0GA" alt="ATH Móvil"/>
+                        Pay with ATH Móvil
+                    </a>
+                </div>
+                <!-- <button data-hs-overlay="#hs-modal-methods" class="rounded-full py-4 px-6 bg-indigo-600 text-white font-semibold text-lg w-full text-center transition-all duration-500 hover:bg-indigo-700">Checkout</button> -->
             </div>
             
         
@@ -161,10 +171,10 @@
                             </svg>
                             Pay with Cash
                         </button>
-                        <button type="button" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-orange-600 text-white hover:bg-orange-700 disabled:opacity-50 disabled:pointer-events-none">
+                        <a [routerLink]="['/athMovil']" routerLinkActive="router-link-active"  type="button" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-orange-600 text-white hover:bg-orange-700 disabled:opacity-50 disabled:pointer-events-none">
                             <img class="h-6" src="https://play-lh.googleusercontent.com/e8NLtGRmk0z2SUnuwPL18pMUmyJg7z3UTsWZ2YpPcdXqO-k0nNqeI1vHRMJhTNm0GA" alt="ath movil"/>
                             Pay with Movil
-                        </button>
+                        </a>
                     </div>
                     <!-- End Button Group -->
                 </div>
