--- a/src/app/Components/Home/AddToCartView/addcart/addcart.component.html
+++ b/src/app/Components/Home/AddToCartView/addcart/addcart.component.html
@@ -62,7 +62,7 @@
                                 </svg>
                             </button>
                         </div>
-                        <button
+                        <button (click)="AddToCart()"
                             class="group py-4 px-5 rounded-full bg-indigo-500 text-white font-semibold text-lg w-full flex items-center justify-center gap-2 transition-all duration-500 hover:bg-indigo-900">
                             <svg class="stroke-indigo-200 " width="22" height="22" viewBox="0 0 22 22" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
