--- a/src/app/Components/Home/AddToCartView/addcart/addcart.component.html
+++ b/src/app/Components/Home/AddToCartView/addcart/addcart.component.html
@@ -1,3 +1,8 @@
+
+
+
+
+
 <section class="relative ">
     <div class="w-full mx-auto px-4 sm:px-6 lg:px-0">
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 mx-auto max-md:px-2 ">
@@ -25,7 +30,7 @@
   <div class="grid grid-cols-3 min-[400px]:grid-cols-5 gap-3 max-w-md">
     <button *ngFor="let size of ['S', 'M', 'L', 'XL', 'XXL']"
         (click)="selectSize(size)"
-        [ngClass]="selectedSize === size ? 'bg-black text-white border-gray-300 shadow-sm' : 'bg-white text-gray-900 border-gray-200'"
+        [ngClass]="selectedSize === size ? 'bg-black text-white border-gray-300 shadow-sm' : 'bg-white text-gray-900 border-gray-200 shadow-xl'"
         class="text-center py-1.5 px-6 w-full font-semibold text-lg leading-8 flex items-center rounded-full justify-center transition-all duration-300 hover:bg-gray-300">
   {{ size }}
 </button>
