--- a/src/app/Components/CheckOut/cart/cart/cart.component.html
+++ b/src/app/Components/CheckOut/cart/cart/cart.component.html
@@ -22,7 +22,7 @@
                     <div class="flex items-center justify-between w-full mb-4">
                         <h5 class="font-manrope font-bold text-2xl leading-9 text-gray-900">{{items.productName}} - {{items.selectedSize}}</h5>
                         <button (click)="RemoveItem(items.cartID)" class="rounded-full group flex items-center justify-center focus-within:outline-red-500">
-                            <svg width="34" height="34" viewBox="0 0 34 34" fill="none"
+                            <svg class="w-12 h-12"  viewBox="0 0 34 34" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <circle class="fill-red-50 transition-all duration-500 group-hover:fill-red-400"
                                     cx="17" cy="17" r="17" fill="" />
@@ -54,10 +54,10 @@
                         <!-- Cash icon -->
                         Pay with Cash
                     </button>
-                    <a [routerLink]="['/athMovil']" type="button" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-orange-600 text-white hover:bg-orange-700">
+                    <button (click)="PayWithAthMovil()" type="button" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-orange-600 text-white hover:bg-orange-700">
                         <img class="h-6 mr-2" src="https://play-lh.googleusercontent.com/e8NLtGRmk0z2SUnuwPL18pMUmyJg7z3UTsWZ2YpPcdXqO-k0nNqeI1vHRMJhTNm0GA" alt="ATH Móvil"/>
                         Pay with ATH Móvil
-                    </a>
+                    </button>
                 </div>
                 <!-- <button data-hs-overlay="#hs-modal-methods" class="rounded-full py-4 px-6 bg-indigo-600 text-white font-semibold text-lg w-full text-center transition-all duration-500 hover:bg-indigo-700">Checkout</button> -->
             </div>
