--- a/src/app/Components/Home/CollectionItems/CollectionCategory/categorylist/categorylist.component.html
+++ b/src/app/Components/Home/CollectionItems/CollectionCategory/categorylist/categorylist.component.html
@@ -4,7 +4,7 @@
   <a [routerLink]="['/addToCart', product.itemID]" href="#">
   <div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
     <div class="group relative">
-      <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none lg:h-80">
+      <div class="w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none lg:h-80">
         <img src="data:image/jpeg;base64,{{product.Item_Image}}" alt="{{product.Item_Name}}" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
       </div>
       <div class="mt-4 flex flex-col justify-between"> <!-- Changed layout here -->
