--- a/src/app/Components/CheckOut/CheckOutWithATHMovil/athmovil/athmovil.component.html
+++ b/src/app/Components/CheckOut/CheckOutWithATHMovil/athmovil/athmovil.component.html
@@ -26,6 +26,6 @@
     </div>
     <div class="text-center">
       <button (click)="confirmedPayment()" style="background-color:#dd6b20" class="text-white py-4 w-full rounded-lg shadow-lg transition-transform transform hover:scale-105 hover:bg-orange-500">Confirm Payment</button>
-      <button (click)="CanceledPayment()" style="background-color:red" class="text-white py-4 w-full mt-4  rounded-lg shadow-lg transition-transform transform hover:scale-105 hover:bg-orange-500">Cancel Payment</button>
+      <!-- <button (click)="CanceledPayment()" style="background-color:red" class="text-white py-4 w-full mt-4  rounded-lg shadow-lg transition-transform transform hover:scale-105 hover:bg-orange-500">Cancel Payment</button> -->
     </div>
   </div>
