--- a/src/app/Components/CheckOut/cart/cart/cart.component.html
+++ b/src/app/Components/CheckOut/cart/cart/cart.component.html
@@ -50,7 +50,7 @@
                         <img class="h-3 mr-2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d6/Visa_2021.svg/1280px-Visa_2021.svg.png" alt="Visa Logo"/>
                         Pay with Visa
                     </button>
-                    <button type="button" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-green-600 text-white hover:bg-green-700">
+                    <button (click)="PayWithCash()" type="button" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-green-600 text-white hover:bg-green-700">
                         <!-- Cash icon -->
                         Pay with Cash
                     </button>
