--- a/src/app/Components/Home/AddToCartView/addcart/addcart.component.html
+++ b/src/app/Components/Home/AddToCartView/addcart/addcart.component.html
@@ -7,10 +7,11 @@
     <div class="w-full mx-auto px-4 sm:px-6 lg:px-0">
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-16 mx-auto max-md:px-2 ">
             <div class="img">
-                <div class="img-box h-full max-lg:mx-auto ">
+                <div class="flex justify-center items-center h-full">
                     <img src="data:image/jpeg;base64,{{this.itemObj.Item_Image}}" alt=""
-                        class="max-lg:mx-auto lg:ml-auto h-full">
+                        class="max-w-full h-auto">
                 </div>
+                
             </div>
             <div
                 class="data w-full lg:pr-8 pr-0 xl:justify-start justify-center flex items-center max-lg:pb-10 xl:my-2 lg:my-5 my-0">
