--- a/src/app/Components/Home/CollectionItems/collections/collections.component.html
+++ b/src/app/Components/Home/CollectionItems/collections/collections.component.html
@@ -12,22 +12,23 @@
   }
   ```
 -->
-<div class="bg-gray-100">
+<div class="bg-gray-100 rounded-lg">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
         <div class="mx-auto max-w-2xl py-16 sm:py-24 lg:max-w-none lg:py-32">
-            <h2 class="text-2xl font-bold text-gray-900">Collections</h2>
+            <h2 class="text-3xl font-bold text-gray-900">Collections</h2>
 
             <div class="mt-6 space-y-12 lg:grid lg:grid-cols-3 lg:gap-x-6 lg:space-y-0">
                 <a *ngFor="let collection of this.collectionList" href="#" [routerLink]="['/collection', collection.collectionName]" >
                     <div class="group relative">
+                        <p class="text-3xl font-semibold pt-4 pb-2 text-gray-900">{{collection.collectionName}}</p>
                         <div
                             class="relative h-80 w-full overflow-hidden rounded-lg bg-white sm:aspect-h-1 sm:aspect-w-2 lg:aspect-h-1 lg:aspect-w-1 group-hover:opacity-75 sm:h-64">
                             <img src="data:image/jpeg;base64,{{collection.CollectionCoverImage}}"
                                 alt="" class="h-full w-full object-cover object-center">
                         </div>
 
-                        <h3 class="mt-6 text-sm text-gray-500">40 lefts</h3>
-                        <p class="text-3xl font-semibold pb-2 text-gray-900">{{collection.collectionName}}</p>
+                        <!-- <h3 class="mt-6 text-sm text-gray-500">40 lefts</h3> -->
+                        <!-- <p class="text-3xl font-semibold pb-2 text-gray-900">{{collection.collectionName}}</p> -->
 
                     </div>
                 </a>
