added cash flow

--- a/src/app/Components/CheckOut/cart/cart/cart.component.html
+++ b/src/app/Components/CheckOut/cart/cart/cart.component.html
@@ -47,7 +47,7 @@
                 <p class="font-normal text-base leading-7 text-gray-500 text-center mb-5 mt-6">Shipping taxes, and discounts calculated at checkout</p>
                 <div class="grid gap-4 mb-6">
                     <button type="button" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700">
-                        <img class="h-3 mr-2" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d6/Visa_2021.svg/1280px-Visa_2021.svg.png" alt="Visa Logo"/>
+                        <img class="h-3 mr-2" src="../../../../../assets/Logos/VisaLogo.png" alt="Visa Logo"/>
                         Pay with Visa
                     </button>
                     <button (click)="PayWithCash()" type="button" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-green-600 text-white hover:bg-green-700">
@@ -55,7 +55,7 @@
                         Pay with Cash
                     </button>
                     <button (click)="PayWithAthMovil()" type="button" class="w-full py-3 px-4 inline-flex justify-center items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent bg-orange-600 text-white hover:bg-orange-700">
-                        <img class="h-6 mr-2" src="https://play-lh.googleusercontent.com/e8NLtGRmk0z2SUnuwPL18pMUmyJg7z3UTsWZ2YpPcdXqO-k0nNqeI1vHRMJhTNm0GA" alt="ATH Móvil"/>
+                        <img class="h-6 mr-2" src="../../../../../assets/Logos/athMovil.png" alt="ATH Móvil"/>
                         Pay with ATH Móvil
                     </button>
                 </div>
