--- a/src/app/Components/CheckOut/CheckOutWithCash/cash/cash.component.html
+++ b/src/app/Components/CheckOut/CheckOutWithCash/cash/cash.component.html
@@ -26,7 +26,7 @@
       </div>
       <div class="mb-4 text-center">
         <label for="amountGiven" class="text-md font-bold text-gray-600">Amount Given:</label>
-        <input [(ngModel)]="amountGiven" type="number" inputmode="numeric" id="amountGiven" name="amountGiven" class="form-input mt-1 block w-full rounded-lg border-2 border-gray-300 px-4 py-3 text-gray-700 placeholder-gray-400 shadow-lg transition duration-300 ease-in-out hover:border-blue-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-500" placeholder="$0.00" (keydown)="ValidateNumber($event)" required />
+        <input [(ngModel)]="amountGiven" type="number" inputmode="decimal" id="amountGiven" name="amountGiven" class="form-input mt-1 block w-full rounded-lg border-2 border-gray-300 px-4 py-3 text-gray-700 placeholder-gray-400 shadow-lg transition duration-300 ease-in-out hover:border-blue-300 focus:border-blue-500 focus:ring-2 focus:ring-blue-500" placeholder="$0.00" (keydown)="ValidateNumber($event)" required />
       </div>
       <div class="text-center">
         <button  (click)="this.processPayment()" class="w-full rounded-lg bg-green-600 py-3 text-white shadow-lg transition duration-300 ease-in-out hover:scale-105 hover:bg-green-700">Confirm Payment</button>
